# AI-music-producer

./: .gitignore  AI-music-producer PRD_v1.1.md  CLAUDE.md  OUTPUT_DEMO_PROMPT.md  PM_AUDIT_REPORT.md  README.md  SKILLS.md  one law.md  pyproject.toml  开发清单.md  目录框架规范.md
corpus/: _ingestion_report.md  lyrics_modern_zh.json  poetry_classical.json
data/: chinese_pop_grids.json  cliche_blacklist.json  shisanzhe_map.json  visual_montage_nouns.json
docs/: PM_Role_and_Rule.md  TASK-013-dev-checklist.md  TASK-021-v2-RFC-architect-instruction.md  TASK-022-dev-checklist.json  ai_doc_manifest.json  api-setup.md  cleanup_plan_one_law_directory_rule.md  current_task_index.json  issue19_task_evidence.md  issue20_pm_audit_evidence.md  r00-rootcause.md  repair-decision-tree.md  runbook_cli_commands.md  task013_contract_v1.md  task021_v2_rfc.md  开发整改事项清单.md  整改task - 02.json  整改task-013-ref-audio-pipeline.json  整改task.json  映月工厂_极简歌词工坊_PRD.json  映月工厂_极简歌词工坊_PRD_v2.0.json  🎵 AI 音乐生成系统产品经理 (PM) Role & Rule.md
scripts/: __init__.py  auto_tag_golden_anchors.py  backfill_classical.py  build_corpus_index.py  clean_yuanqu.py  corpus_quality_lint.py  curate_golden_dozen.py  fix_emotion_tags.py  ingest_github_corpus.py  ingest_new_classical.py  llm_enrich_corpus.py  merge_classical.py  merge_raw_to_corpus.py  repair_classical_required.py  repair_corpus.py  repair_golden_rows.py  rule_enrich_classical.py  run_corpus_ingestion.py
skills/: CLAUDE.md
src/: audio_intake.py  claude_client.py  compile.py  lint.py  main.py  profile_router.py  retriever.py  schemas.py
tests/: test_e2e_smoke.py  (+72 more)
(+193 files in other folders)
