[project]
name = "ai-music-producer"
version = "2.0.0"
description = "Lyric craftsman CLI for Suno triplet outputs"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.60.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.0.0",
  "pypinyin>=0.51.0",
  "jieba>=0.42.1",
  "rapidfuzz>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
